--- a/.github/workflows/push-to-main.yml
+++ b/.github/workflows/push-to-main.yml
@@ -1,18 +1,20 @@
-name: Build
+name: CI
 
 on:
   push:
+    branches: [main]
+  pull_request:
     branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: 
+      image: kiloexabyte/runner-image:latest
     steps:
-      - uses: actions/checkout@v3
-      
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.24.3'
-      
-      - name: Build
-        run: go build -o crons.exe .
+      - uses: actions/checkout@v6
+      - name: build
+        env: 
+          GOFLAGS: -buildvcs=false
+        run: |
+          op build
